--- a/helpers/templates/stock.html
+++ b/helpers/templates/stock.html
@@ -49,15 +49,15 @@
                 <thead style="background-color: chocolate; color: azure;">
                     <tr>
                         <th scope="col">Producto</th>
-                        <th scope="col">Precio</th>
-                        <th scope="col">Cantidad</th>
+                        <th scope="col">Fecha</th>
+                        <th scope="col">Stock</th>
                     </tr>
                 </thead>
                 <tbody>
                     {{#each data.obj}}
                     <tr>
-                        <th>{{this.product}}</th>
-                        <td>${{this.price}}</td>
+                        <td>{{this.product}}</td>                        
+                        <td>{{this.date}}</td>
                         <td>{{this.stock}}</td>
                     </tr>
                     {{/each}}
