--- a/views/include/lists.ejs
+++ b/views/include/lists.ejs
@@ -75,7 +75,7 @@
                                 <input type="text" name="id" value="<%= products._id %>" hidden>
                                 <input type="text" name="price" value="<%= products.price %>" hidden>
                                 <input type="text" name="product" value="<%= products.product %>">
-                                <input type="text" name="order" value="<%= data._id %>" hidden>
+                                <input type="text" name="order" value="<%= data._id %>">
                                 <button type="button" class="btn btn-danger"
                                     data-bs-dismiss="modal">Close</button>
                                 <button type="submit" class="btn btn-success">Enviar</button>
