--- a/helpers/templates/detail.html
+++ b/helpers/templates/detail.html
@@ -27,7 +27,7 @@
                                 <p>Apparecchio</p>
                                 <p>Apparecchio@gmail.com</p>
                                 <p>San Salvador, El Salvador</p>
-                                <p>{{data.date}}</p>
+                                <p>{{data.newDate}}</p>
                             </div>
                         </td>
                     </tr>
@@ -36,9 +36,13 @@
         </div>
         <div style="margin-top: 2%;">
             <div style="width: 50%;">
-                <p style="font-size: medium; font-family: Arial, Helvetica, sans-serif;">Cliente: {{data.user}}</p>
+                <p style="font-size: medium; font-family: Arial, Helvetica, sans-serif;">Reporte creado por: {{data.user}}</p>
             </div>
-            
+        </div>
+        <div style="margin-top: 2%;">
+            <div style="width: 50%;">
+                <p style="font-size: medium; font-family: Arial, Helvetica, sans-serif;">Cliente: {{data.client}}</p>
+            </div>
         </div>
         <div class="row my-3">
             <table class="table table-striped table-bordered">
