--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -63,7 +63,8 @@
                                 <div class="row my-3">
                                     <div class="col-10 d-flex flex-row align-items-center ms-4">
                                         <label for="" class="form-label me-2">Fecha: </label>
-                                        <input type="date" placeholder="yyyy-mm-dd" value="" min="2022-01-01" id="fecha">
+                                        <input type="date" placeholder="yyyy-mm-dd" value="" min="2022-01-01"
+                                            id="fecha">
                                         <button type="button" class="btn btn-primary ms-3"
                                             id="btn-busqueda">Buscar</button>
                                     </div>
@@ -130,9 +131,11 @@
                                         <%= data.status %>
                                     </td>
                                     <td>
-                                        <button class="btn btn-info"><a href="/pedidos/detalles/<%= data._id %>"
-                                                class="text-light">Detalles</a></button>
-                                        
+                                        <!-- <button class="btn btn-info"><a href="/pedidos/detalles/<%= data._id %>"
+                                                class="text-light">Detalles</a></button> -->
+                                        <a class="btn btn-warning text-light" href="report/detail/<%= data._id %>/<%= data.client %>"
+                                            target="_blank">Reporte</a>
+
                                     </td>
                                     <td>
                                         <button class="btn btn-danger"><a href="/cancel/orders/<%= data._id %>"
