--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -18,9 +18,9 @@
                         <input class="form-control w-100 border-0" list="datalistOptions" id="seacrhProduct"
                             placeholder="buscar producto..." type="text" name="busqueda">
                     </div>
-                    <div class="col-2 d-flex justify-content-end">
+                    <div class="col-6 d-flex justify-content-end">
                         <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        <button type="button" class="btn btn-primary ms-3" data-bs-toggle="modal"
                             data-bs-target="#exampleModal">
                             Añadir un producto
                         </button>
@@ -86,10 +86,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-2 my-2 mx-0 d-flex flex-row align-items-center border-bottom">
                         <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        <button type="button" class="btn btn-primary ms-3" data-bs-toggle="modal"
                             data-bs-target="#exampleModalCategorie">
                             Categorias
                         </button>
@@ -111,10 +109,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-2 my-2 mx-0 d-flex flex-row align-items-center border-bottom">
                         <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        <button type="button" class="btn btn-primary ms-3" data-bs-toggle="modal"
                             data-bs-target="#exampleModalStock">
                             Gráfico de productos
                         </button>
@@ -136,9 +132,9 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-2 my-2 mx-0 d-flex flex-row align-items-center border-bottom">
-                        <a class="btn btn-warning text-light" href="/report/products" target="_blank">Reporte</a>
+                        <button type="button" href="/report/products" class="btn btn-primary ms-3" target="_blank">
+							Reporte
+						</button>
                     </div>
                 </div>
             </div>
