validacion de hora

--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -134,11 +134,11 @@
 								</div>
 							</div>
 						</div>
-						<button type="button" href="/report/user/admin" class="btn btn-primary ms-3" target="_blank">
-							Reporte de Administradores
+						<button type="button"  class="btn btn-primary ms-3">
+							<a href="/report/user/admin" target="_blank" class="text-light">Reporte de Administradores</a>
 						</button>
-						<button type="button" href="/report/user/client" class="btn btn-primary ms-3" target="_blank">
-							Reporte de clientes
+						<button type="button" class="btn btn-primary ms-3">
+							<a href="/report/user/client" target="_blank" class="text-light">Reporte de clientes</a>
 						</button>
 					</div>
 				</div>
