--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -132,8 +132,8 @@
                                 </div>
                             </div>
                         </div>
-                        <button type="button" href="/report/products" class="btn btn-primary ms-3" target="_blank">
-							Reporte
+                        <button type="button"  class="btn btn-primary ms-3">
+							<a href="/report/products" target="_blank" class="text-dark">Reporte</a>
 						</button>
                     </div>
                 </div>
