--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -135,10 +135,10 @@
 							</div>
 						</div>
 						<button type="button"  class="btn btn-primary ms-3">
-							<a href="/report/user/admin" target="_blank" class="text-light">Reporte de Administradores</a>
+							<a href="/report/user/admin" target="_blank" class="text-dark">Reporte de Administradores</a>
 						</button>
 						<button type="button" class="btn btn-primary ms-3">
-							<a href="/report/user/client" target="_blank" class="text-light">Reporte de clientes</a>
+							<a href="/report/user/client" target="_blank" class="text-dark">Reporte de clientes</a>
 						</button>
 					</div>
 				</div>
