--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -19,9 +19,9 @@
                             placeholder="buscar producto..." type="text" name="busqueda">
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-6 d-flex justify-content-end">
                     <!-- Button trigger modal -->
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                    <button type="button" class="btn btn-primary ms-3" data-bs-toggle="modal"
                         data-bs-target="#exampleModalCategorie">
                         Graficos
                     </button>
@@ -45,7 +45,7 @@
                     </div>
 
                     <!-- Button trigger modal -->
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                    <button type="button" class="btn btn-primary ms-3" data-bs-toggle="modal"
                         data-bs-target="#exampleModalOrder">
                         Gráficos
                     </button>
@@ -76,7 +76,7 @@
                     </div>
 
                     <!-- Button trigger modal -->
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    <button type="button" class="btn btn-primary ms-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         Ver pedidos
                     </button>
 
