Renombre de archivos js

--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -377,5 +377,5 @@
                 <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
                 <script src="/alerts.js"></script>
                 <script src="/productos.js"></script>
-                <script src="/productosStock.js"></script>
+                <script src="/productstock.js"></script>
                 <script src="/search.js"></script>
