--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -295,7 +295,7 @@
                                                                             <%= data.categorie %>
                                                                         </option>
                                                                         <% categories.forEach((data)=> { %>
-                                                                            <% if(data.status=='active' ) { %>
+                                                                            <% if(data.status=='activo' ) { %>
                                                                                 <option value="<%= data.categorie %>">
                                                                                     <%= data.categorie %>
                                                                                 </option>
