--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -89,16 +89,16 @@
 													<select class="form-select" id="inputGroupSelect01" name="role"
 														required>
 														<option>admin</option>
-														<option>client</option>
+														<option>cliente</option>
 													</select>
 												</div>
 												<div class="col-md-6">
 													<label for="" class="form-label">Estado</label>
 													<select class="form-select" id="inputGroupSelect01" name="status"
 														required>
-														<option>Activo</option>
-														<option>Inactivo</option>
-														<option>Baneado</option>
+														<option>activo</option>
+														<option>inactivo</option>
+														<option>baneado</option>
 													</select>
 												</div>
 											</div>
@@ -241,7 +241,7 @@
 																			<%= data.role %>
 																		</option>
 																		<option>admin</option>
-																		<option>client</option>
+																		<option>cliente</option>
 																	</select>
 																</div>
 																<div class="col-md-6">
@@ -251,9 +251,9 @@
 																		<option selected>
 																			<%= data.status %>
 																		</option>
-																		<option>active</option>
-																		<option>inactive</option>
-																		<option>banned</option>
+																		<option>activo</option>
+																		<option>inactivo</option>
+																		<option>baneado</option>
 																	</select>
 																</div>
 															</div>
