--- a/views/account.ejs
+++ b/views/account.ejs
@@ -5,35 +5,35 @@
             <div class="col-10">
                 <div class="row py-2">
                     <div class="col-4">
-                        <label for="exampleFormControlInput1" class="form-label text-light">Nombres</label>
-                        <input type="text" class="form-control bg-secondary" id="exampleFormControlInput1"
+                        <label for="exampleFormControlInput1" class="form-label text-light ">Nombres</label>
+                        <input type="text" class="form-control " id="exampleFormControlInput1"
                             placeholder="" required name="name">
                     </div>
                     <div class="col-4">
-                        <label for="exampleFormControlInput1" class="form-label text-light">Apellidos</label>
-                        <input type="text" class="form-control bg-secondary" id="exampleFormControlInput1"
+                        <label for="exampleFormControlInput1" class="form-label text-light ">Apellidos</label>
+                        <input type="text" class="form-control " id="exampleFormControlInput1"
                             placeholder="" required name="lastname">
                     </div>
                     <div class="col-4">
-                        <label for="exampleFormControlInput1" class="form-label text-light">Usuario</label>
-                        <input type="text" class="form-control bg-secondary" id="exampleFormControlInput1"
+                        <label for="exampleFormControlInput1" class="form-label text-light ">Usuario</label>
+                        <input type="text" class="form-control " id="exampleFormControlInput1"
                             placeholder="" required name="user">
                     </div>
                 </div>
                 <div class="row py-2">
                     <div class="col-4">
-                        <label for="exampleFormControlInput1" class="form-label text-light">Correo</label>
-                        <input type="email" class="form-control bg-secondary" id="exampleFormControlInput1"
+                        <label for="exampleFormControlInput1" class="form-label text-light ">Correo</label>
+                        <input type="email" class="form-control " id="exampleFormControlInput1"
                             placeholder="" required name="email">
                     </div>
                     <div class="col-4">
-                        <label for="exampleFormControlInput1" class="form-label text-light">Documento</label>
-                        <input type="text" class="form-control bg-secondary" id="exampleFormControlInput1"
+                        <label for="exampleFormControlInput1" class="form-label text-light ">Documento</label>
+                        <input type="text" class="form-control " id="exampleFormControlInput1"
                             placeholder="" required name="document">
                     </div>
                     <div class="col-4">
-                        <label for="exampleFormControlInput1" class="form-label text-light">Clave</label>
-                        <input type="password" class="form-control bg-secondary" id="exampleFormControlInput1"
+                        <label for="exampleFormControlInput1" class="form-label text-light ">Clave</label>
+                        <input type="password" class="form-control " id="exampleFormControlInput1"
                             placeholder="" required name="password">
                     </div>
                 </div>
