--- a/helpers/templates/invoice.html
+++ b/helpers/templates/invoice.html
@@ -24,9 +24,9 @@
                         </td>
                         <td style="width: 50%; text-align: end;">
                             <div style="margin-right: 35px;">
-                                <p>Apparecchio</p>
-                                <p>Apparecchio@gmail.com</p>
-                                <p>San Salvador, El Salvador</p>
+                                <p>Mario Edgardo Rios Menjivar</p>
+                                <p>CEO - Lic en Animación Digital y Videojuegos</p>
+                                <p>San Salvador</p>
                                 <p>{{data.date}}</p>
                             </div>
                         </td>
