--- a/helpers/templates/stock.html
+++ b/helpers/templates/stock.html
@@ -24,10 +24,10 @@
                         </td>
                         <td style="width: 50%; text-align: end;">
                             <div style="margin-right: 35px;">
-                                <p>Sublisivarte</p>
-                                <p>Apparecchio@gmail.com</p>
-                                <p>San Salvador, El Salvador</p>
-                                <p>{{data.newDate}}</p>
+                                <p>Mario Edgardo Rios Menjivar</p>
+                                <p>CEO - Lic en Animación Digital y Videojuegos</p>
+                                <p>San Salvador</p>
+                                <p>{{data.date}}</p>
                             </div>
                         </td>
                     </tr>
@@ -37,11 +37,6 @@
         <div style="margin-top: 2%;">
             <div style="width: 50%;">
                 <p style="font-size: medium; font-family: Arial, Helvetica, sans-serif;">Usuario: {{data.user}}</p>
-            </div>
-        </div>
-        <div style="margin-top: 2%;">
-            <div style="width: 50%;">
-                <p style="font-size: medium; font-family: Arial, Helvetica, sans-serif;">Categoria: {{data.category}}</p>
             </div>
         </div>
         <div class="row my-3">
