--- a/helpers/templates/report.html
+++ b/helpers/templates/report.html
@@ -24,10 +24,10 @@
                         </td>
                         <td style="width: 50%; text-align: end;">
                             <div style="margin-right: 35px;">
-                                <p>Apparecchio</p>
-                                <p>Apparecchio@gmail.com</p>
-                                <p>San Salvador, El Salvador</p>
-                                <p>{{data.newDate}}</p>
+                                <p>Mario Edgardo Rios Menjivar</p>
+                                <p>CEO - Lic en Animación Digital y Videojuegos</p>
+                                <p>San Salvador</p>
+                                <p>{{data.date}}</p>
                             </div>
                         </td>
                     </tr>
