--- a/views/categorias.ejs
+++ b/views/categorias.ejs
@@ -105,12 +105,10 @@
                         <% }) %>
                     </table>
                 </div>
-            </div>
-            <% } %>
                 <input type="text" value="<%= confirmation %>" id="confirmation" hidden>
                 <input type="text" value="<%= mensaje %>" id="mensaje" hidden>
                 <input type="text" value="<%= icon %>" id="icon" hidden>
-
                 <script src="/alerts.js"></script>
-
-<script src="search.js"></script>
+                <script src="/search.js"></script>
+            </div>
+            <% } %>
