--- a/resources/css/public.css
+++ b/resources/css/public.css
@@ -4,7 +4,7 @@
     --bg-dark: #ffffff;
     --text: #000000;
     --dark-blue: #ffffff;
-    --bg-primary: #ffc107;
+    --bg-primary: #8bd0e0;
     --bg-secondary: #2d2e2f;
 }
 
