--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -19,11 +19,11 @@
                             placeholder="buscar producto..." type="text" name="busqueda">
                     </div>
                 </div>
-                <div class="col-6 d-flex justify-content-end">
+                <div class="col-6 d-flex justify-content-start">
                     <!-- Button trigger modal -->
-                    <button type="button" class="btn btn-primary ms-3" data-bs-toggle="modal"
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                         data-bs-target="#exampleModalCategorie">
-                        Graficos
+                        Pedidos por estado
                     </button>
 
                     <!-- Modal -->
@@ -47,7 +47,7 @@
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary ms-3" data-bs-toggle="modal"
                         data-bs-target="#exampleModalOrder">
-                        Gráficos
+                        Pedidos por fecha
                     </button>
 
                     <!-- Modal -->
@@ -77,7 +77,7 @@
 
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary ms-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        Ver pedidos
+                        Pedidos por cliente
                     </button>
 
                     <!-- Modal -->
@@ -135,7 +135,7 @@
 
                                         <!-- <button class="btn btn-info"><a href="/pedidos/detalles/<%= data._id %>"
                                                 class="text-light">Detalles</a></button> -->
-                                        <a class="btn btn-warning text-light" href="report/detail/<%= data._id %>/<%= data.client %>"
+                                        <a class="btn btn-primary text-light" href="report/detail/<%= data._id %>/<%= data.client %>"
                                             target="_blank">Reporte</a>                                       
                                     </td>
                                     <td>
