--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -12,137 +12,135 @@
 					</nav>
 				</div>
 				<div class="row d-flex align-items-center justify-content-between my-3">
-					<div class="col-3 my-2 mx-0 d-flex flex-row align-items-center border-bottom">
+					<div class="col-4 my-2 mx-0 d-flex flex-row align-items-center border-bottom">
 						<img width="30" height="30" src="https://img.icons8.com/ios/30/search--v1.png" alt="search--v1"
 							onclick="searchUser()" />
 						<input class="form-control w-100 border-0" list="datalistOptions" id="seacrhUser"
 							placeholder="Buscar usuario..." type="text" name="busqueda">
 					</div>
-					<div class="col-6 d-flex justify-content-end">
-						<!-- Button trigger modal -->
-						<button type="button" class="btn btn-dark" data-bs-toggle="modal"
-							data-bs-target="#exampleModal">
-							Añadir Usuario
-						</button>
+				</div>
+				<div class="col-8 d-flex justify-content-start">
+					<!-- Button trigger modal -->
+					<button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
+						Añadir Usuario
+					</button>
 
-						<!-- Modal -->
-						<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-							aria-hidden="true">
-							<div class="modal-dialog">
-								<div class="modal-content">
-									<form action="/api/users" method="post">
-										<div class="modal-header">
-											<h1 class="modal-title fs-5" id="exampleModalLabel">Crear usuario</h1>
-											<button type="button" class="btn-close" data-bs-dismiss="modal"
-												aria-label="Close"></button>
-										</div>
-										<div class="modal-body">
-											<div class="row">
-												<div class="col-md-6">
-													<label for="" class="form-label">Nombre:</label>
-													<input type="text" class="form-control" name="name" id=""
-														required />
-												</div>
-												<div class="col-md-5">
-													<label for="" class="form-label">Apellido</label>
-													<div class="input-group input-group-col-md-3">
-														<input type="text" class="form-control" id=""
-															aria-describedby="addon-wrapping" required
-															name="lastname" />
-													</div>
-												</div>
-											</div>
-											<br />
-											<div class="row">
-												<div class="col-md-6">
-													<label for="" class="form-label">Correo:</label>
-													<input type="text" class="form-control" name="email" id=""
-														required />
-												</div>
-												<div class="col-md-5">
-													<label for="username" class="form-label">Usuario</label>
-													<div class="input-group input-group-col-md-3">
-														<input type="text" class="form-control" id="username"
-															aria-describedby="addon-wrapping" required name="user"
-															autocomplete="off" />
-													</div>
-												</div>
-											</div>
-											<div class="row">
-												<div class="col-md-5">
-													<label for="password" class="form-label">Contraseña</label>
-													<div class="input-group input-group-col-md-3">
-														<input type="password" class="form-control bg-secondary"
-															id="password" placeholder="" required name="password"
-															autocomplete="off" />
-													</div>
-												</div>
-												<div class="col-md-6">
-													<label for="" class="form-label">Documento:</label>
-													<input type="text" class="form-control" name="document" id=""
-														required />
-												</div>
-											</div>
-											<div class="row">
-												<div class="col-md-5">
-													<label for="" class="form-label">Rol</label>
-													<select class="form-select" id="inputGroupSelect01" name="role"
-														required>
-														<option>admin</option>
-														<option>cliente</option>
-													</select>
-												</div>
-												<div class="col-md-6">
-													<label for="" class="form-label">Estado</label>
-													<select class="form-select" id="inputGroupSelect01" name="status"
-														required>
-														<option>activo</option>
-														<option>inactivo</option>
-														<option>baneado</option>
-													</select>
-												</div>
-											</div>
-										</div>
-										<div class="modal-footer">
-											<button type="button" class="btn btn-secondary"
-												data-bs-dismiss="modal">Cerrar</button>
-											<button type="submit" class="btn btn-primary">Crear</button>
-										</div>
-									</form>
-								</div>
-							</div>
-						</div>
-						<button type="button" class="btn btn-primary ms-3" data-bs-toggle="modal"
-							data-bs-target="#exampleModalCategorie">
-							Graficos
-						</button>
-
-						<!-- Modal -->
-						<div class="modal fade" id="exampleModalCategorie" tabindex="-1"
-							aria-labelledby="exampleModalLabel" aria-hidden="true">
-							<div class="modal-dialog">
-								<div class="modal-content">
+					<!-- Modal -->
+					<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+						aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<form action="/api/users" method="post">
 									<div class="modal-header">
-										<h1 class="modal-title fs-5" id="exampleModalLabel">Gráficos</h1>
+										<h1 class="modal-title fs-5" id="exampleModalLabel">Crear usuario</h1>
 										<button type="button" class="btn-close" data-bs-dismiss="modal"
 											aria-label="Close"></button>
 									</div>
 									<div class="modal-body">
-										<p class="fs-4 text-center">Cantidad de usuarios por estado</p>
-										<canvas id="statusUser"></canvas>
+										<div class="row">
+											<div class="col-md-6">
+												<label for="" class="form-label">Nombre:</label>
+												<input type="text" class="form-control" name="name" id="" required />
+											</div>
+											<div class="col-md-5">
+												<label for="" class="form-label">Apellido</label>
+												<div class="input-group input-group-col-md-3">
+													<input type="text" class="form-control" id=""
+														aria-describedby="addon-wrapping" required name="lastname" />
+												</div>
+											</div>
+										</div>
+										<br />
+										<div class="row">
+											<div class="col-md-6">
+												<label for="" class="form-label">Correo:</label>
+												<input type="text" class="form-control" name="email" id="" required />
+											</div>
+											<div class="col-md-5">
+												<label for="username" class="form-label">Usuario</label>
+												<div class="input-group input-group-col-md-3">
+													<input type="text" class="form-control" id="username"
+														aria-describedby="addon-wrapping" required name="user"
+														autocomplete="off" />
+												</div>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-md-5">
+												<label for="password" class="form-label">Contraseña</label>
+												<div class="input-group input-group-col-md-3">
+													<input type="password" class="form-control bg-secondary"
+														id="password" placeholder="" required name="password"
+														autocomplete="off" />
+												</div>
+											</div>
+											<div class="col-md-6">
+												<label for="" class="form-label">Documento:</label>
+												<input type="text" class="form-control" name="document" id=""
+													required />
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-md-5">
+												<label for="" class="form-label">Rol</label>
+												<select class="form-select" id="inputGroupSelect01" name="role"
+													required>
+													<option>admin</option>
+													<option>cliente</option>
+												</select>
+											</div>
+											<div class="col-md-6">
+												<label for="" class="form-label">Estado</label>
+												<select class="form-select" id="inputGroupSelect01" name="status"
+													required>
+													<option>activo</option>
+													<option>inactivo</option>
+													<option>baneado</option>
+												</select>
+											</div>
+										</div>
 									</div>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-secondary"
+											data-bs-dismiss="modal">Cerrar</button>
+										<button type="submit" class="btn btn-primary">Crear</button>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+					<button type="button" class="btn btn-primary ms-3" data-bs-toggle="modal"
+						data-bs-target="#exampleModalCategorie">
+						Graficos
+					</button>
+
+					<!-- Modal -->
+					<div class="modal fade" id="exampleModalCategorie" tabindex="-1" aria-labelledby="exampleModalLabel"
+						aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h1 class="modal-title fs-5" id="exampleModalLabel">Gráficos</h1>
+									<button type="button" class="btn-close" data-bs-dismiss="modal"
+										aria-label="Close"></button>
+								</div>
+								<div class="modal-body">
+									<p class="fs-4 text-center">Cantidad de usuarios por estado</p>
+									<canvas id="statusUser"></canvas>
 								</div>
 							</div>
 						</div>
-						<button type="button"  class="btn btn-primary ms-3">
-							<a href="/report/user/admin" target="_blank" class="text-dark">Reporte de Administradores</a>
-						</button>
-						<button type="button" class="btn btn-primary ms-3">
-							<a href="/report/user/client" target="_blank" class="text-dark">Reporte de clientes</a>
-						</button>
 					</div>
+					<button type="button" class="btn btn-primary ms-3">
+						<a href="/report/user/admin" target="_blank" class="text-dark">Reporte de Administradores</a>
+					</button>
+					<button type="button" class="btn btn-primary ms-3">
+						<a href="/report/user/client" target="_blank" class="text-dark">Reporte de clientes</a>
+					</button>
 				</div>
-				<!-- tabla para mostrar los usuarios del sistema -->
+			</div>
+			<!-- tabla para mostrar los usuarios del sistema -->
+			<div class="container">
 				<div class="row my-3">
 					<table class="table my-3 table-bordered">
 						<thead>
@@ -180,7 +178,7 @@
 										<%= data.status %>
 									</td>
 									<td>
-										<button type="button" class="btn btn-warning mb-3" data-bs-toggle="modal"
+										<button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal"
 											data-bs-target="#staticBackdrop<%= data._id %>update">
 											Actualizar
 										</button>
@@ -310,6 +308,7 @@
 						</tbody>
 					</table>
 				</div>
+			</div>
 			</div>
 			<% } %>
 
