--- a/views/categorias.ejs
+++ b/views/categorias.ejs
@@ -98,7 +98,7 @@
                                                 href="/delete/categorie/<%= data._id %>">Eliminar</a></button>                                        
                                     </td>
                                     <td>
-                                        <a class="btn btn-warning" href="/report/categories/<%= data.categorie %>" target="_blank">Reporte</a>
+                                        <a class="btn btn-primary" href="/report/categories/<%= data.categorie %>" target="_blank">Reporte</a>
                                     </td>
                                 </tr>
                         </tbody>
