--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -368,13 +368,14 @@
             </div>
             <% } %>
 
+                <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+                <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+                <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
                 <input type="text" value="<%= confirmation %>" id="confirmation" hidden>
                 <input type="text" value="<%= mensaje %>" id="mensaje" hidden>
                 <input type="text" value="<%= icon %>" id="icon" hidden>
 
-                <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-                <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
                 <script src="/alerts.js"></script>
                 <script src="/productos.js"></script>
                 <script src="/productstock.js"></script>
