--- a/helpers/templates/order.html
+++ b/helpers/templates/order.html
@@ -62,7 +62,7 @@
                     <tr>
                         <td colspan="5" style="text-align: center;">Pedidos en proceso</td>
                     </tr>
-                    {{#each data.en_proceso}}
+                    {{#each data.enProceso}}
                     <tr>
                         <td>{{this.client}}</td>                        
                         <td>{{this.name}}</td>
