correccion de errores

--- a/helpers/templates/productos.html
+++ b/helpers/templates/productos.html
@@ -74,9 +74,8 @@
                     </tr>
                     {{#each data.NoStock}}
                     <tr>
-                        <td>{{this.product}}</td>                        
+                        <td style="width: 50%;">{{this.product}}</td>                        
                         <td>{{this.price}}</td>
-                        <td>{{this.stock}}</td>
                     </tr>
                     {{/each}}
                 </tbody>
