--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -151,9 +151,11 @@
                                 </div>
                                 <div class="row my-3">
                                     <div class="col-10 d-flex flex-row align-items-center ms-4">
-                                        <label for="" class="form-label me-2">Categoría: </label>
-                                        <input type="text" class="form-control" name="product" id="producto-categoria" required>
-                                        <button type="button" class="btn btn-primary ms-3" id="btn-buscap">Buscar</button>
+                                        <form class="col-10 d-flex flex-row align-items-center ms-4">
+                                            <label for="" class="form-label me-2">Categoría: </label>
+                                            <input type="text" class="form-control" name="product" id="producto-categoria" required>
+                                            <button type="submit" class="btn btn-primary ms-3" id="btn-buscap">Buscar</button>
+                                        </form>
                                     </div>
                                 </div>
                                 <div id="canvas-container"></div>
