--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -150,7 +150,7 @@
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="row my-3">
-                                    <div class="col-10 d-flex flex-row align-items-center ms-4">
+                                    <div class="">
                                         <form class="col-10 d-flex flex-row align-items-center ms-4">
                                             <label for="" class="form-label me-2">Categoría: </label>
                                             <input type="text" class="form-control" name="product" id="producto-categoria" required>
