--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -86,7 +86,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Pedidos del cliente</h1>
+                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Pedidos por cliente</h1>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                         aria-label="Close"></button>
                                 </div>
