--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -19,7 +19,7 @@
                             placeholder="buscar producto..." type="text" name="busqueda">
                     </div>
                 </div>
-                <div class="col-6 d-flex justify-content-start">
+                <div class="col-8 d-flex justify-content-start">
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                         data-bs-target="#exampleModalCategorie">
@@ -103,7 +103,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="button" class="btn btn-primary ms-3"><a href="/report/orders" target="_blank">Pedidos Generales</a></button>
+                    <button type="button" class="btn btn-primary ms-3"><a href="/report/orders" class="btn-primary" target="_blank">Pedidos Generales</a></button>
                 </div>
 
                 <div class="row my-3">
