cambios de reportes

--- a/helpers/templates/report.html
+++ b/helpers/templates/report.html
@@ -18,7 +18,7 @@
                     <tr>
                         <td style="width: 50%;">
                             <div style="margin-left: 35px;">
-                                <img src="http://localhost:443/images/logo.png" alt="A"
+                                <img src="http://localhost:443/images/logo-report.png" alt="A"
                                     width="50%">
                             </div>
                         </td>
@@ -27,7 +27,7 @@
                                 <p>Mario Edgardo Rios Menjivar</p>
                                 <p>CEO - Lic en Animación Digital y Videojuegos</p>
                                 <p>San Salvador</p>
-                                <p>{{data.date}}</p>
+                                <p>{{data.newDate}}</p>
                             </div>
                         </td>
                     </tr>
