--- a/helpers/templates/stock.html
+++ b/helpers/templates/stock.html
@@ -18,7 +18,7 @@
                     <tr>
                         <td style="width: 50%;">
                             <div style="margin-left: 35px;">
-                                <img src="http://localhost:443/images/logo.png" alt="A"
+                                <img src="http://localhost:443/images/logo-report.png" alt="A"
                                     width="50%">
                             </div>
                         </td>
