--- a/views/include/newPassword.ejs
+++ b/views/include/newPassword.ejs
@@ -1,10 +1,13 @@
 <form action="/password" method="post" id="form">
     <div class="modal-body">
-        <label for="password">Clave:</label>
-        <input type="text" name="password" id="password" required>
+        <label for="password">Contraseña:</label>
+        <input type="password" name="password" id="password" required>
+        <label for="password">Confirmar contraseña:</label>
+        <input type="password" name="password_confirm" id="password_confirm" required>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
         <button type="submit" class="btn btn-success">Guardar</button>
     </div>
 </form>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
