--- a/views/include/newPassword.ejs
+++ b/views/include/newPassword.ejs
@@ -1,4 +1,4 @@
-<form action="/password" method="post" id="form">
+<form action="/password" method="post" id="form_p">
     <div class="modal-body">
         <label for="password">Contraseña:</label>
         <input type="password" name="password" id="password" required>
@@ -10,4 +10,5 @@
         <button type="submit" class="btn btn-success">Guardar</button>
     </div>
 </form>
+<script src="/password.js"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
