--- a/views/include/newPassword.ejs
+++ b/views/include/newPassword.ejs
@@ -1,9 +1,11 @@
 <form action="/password" method="post" id="form_p">
     <div class="modal-body">
-        <label for="password">Contraseña:</label>
-        <input type="password" name="password" id="password" required>
-        <label for="password">Confirmar contraseña:</label>
-        <input type="password" name="password_confirm" id="password_confirm" required>
+        <div class="col-mb-3">
+            <label for="password" class="form-label">Contraseña:</label>
+            <input type="password" class="form-control" id="password" required>
+            <label for="password_confirm" class="form-label">Confirmar contraseña:</label>
+            <input type="password" class="form-control" id="password_confirm" required>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
