--- a/views/include/password.ejs
+++ b/views/include/password.ejs
@@ -1,9 +1,11 @@
 <form action="/email/password" method="post" id="form">
     <div class="modal-body">
-        <label for="user">Usuario:</label>
-        <input type="text" name="user" id="user" required>
-        <label for="email">email:</label>
-        <input type="email" name="email" id="email" required>
+        <div class="col-mb-3">
+            <label for="user" class="form-label">Usuario:</label>
+            <input type="text" class="form-control" name="user" id="user" required>
+            <label for="email" class="form-label">email:</label>
+            <input type="email" class="form-control" name="email" id="email" required>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
