--- a/views/cuenta.ejs
+++ b/views/cuenta.ejs
@@ -54,7 +54,7 @@
                                 <h1 class="modal-title fs-5" id="exampleModalLabel">Cambiar contraseña</h1>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
-                            <%- include('include/password') %>
+                            <%- include('include/newPassword') %>
                         </div>
                     </div>
                 </div>
