--- a/views/include/newPassword.ejs
+++ b/views/include/newPassword.ejs
@@ -1,10 +1,10 @@
-<form action="/password" method="post" id="form_p">
+<form id="form_p">
     <div class="modal-body">
         <div class="col-mb-3">
             <label for="password" class="form-label">Contraseña:</label>
-            <input type="password" class="form-control" id="password" required>
+            <input type="password" class="form-control" id="password" >
             <label for="password_confirm" class="form-label">Confirmar contraseña:</label>
-            <input type="password" class="form-control" id="password_confirm" required>
+            <input type="password" class="form-control" id="password_confirm" >
         </div>
     </div>
     <div class="modal-footer">
@@ -12,5 +12,6 @@
         <button type="submit" class="btn btn-success">Guardar</button>
     </div>
 </form>
+<script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 <script src="/password.js"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
